<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/bgColor"
        tools:context=".auth.signin.view.SignInActivity">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:fontFamily="@font/jet_brains_mono_m"
            android:text="@string/sign_in"
            android:textColor="@color/latte_green"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/sub_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/jet_brains_mono_b"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <LinearLayout
            android:id="@+id/button_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="40dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sub_title">

            <Button
                android:id="@+id/google"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:background="@drawable/round_square_8dp"
                android:backgroundTint="@color/dark_grey_55"
                android:backgroundTintMode="screen"
                android:fontFamily="@font/jet_brains_mono_m"
                android:text="@string/sign_in_google"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <Button
                android:id="@+id/kakao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:background="@drawable/round_square_8dp"
                android:backgroundTint="@color/dark_grey_55"
                android:fontFamily="@font/jet_brains_mono_m"
                android:text="@string/sign_in_kakao"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <Button
                android:id="@+id/naver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:background="@drawable/round_square_8dp"
                android:backgroundTint="@color/dark_grey_55"
                android:fontFamily="@font/jet_brains_mono_m"
                android:text="@string/sign_in_naver"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <Button
                android:id="@+id/github"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:background="@drawable/round_square_8dp"
                android:backgroundTint="@color/dark_grey_55"
                android:fontFamily="@font/jet_brains_mono_m"
                android:text="@string/sign_in_github"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/separate_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_layout">

            <View
                android:id="@+id/left_or"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:background="@color/dark_grey_3d"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/or"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:fontFamily="@font/jet_brains_mono_r"
                android:text="@string/or"
                android:textColor="@color/grey_8b"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/right_or"
                app:layout_constraintStart_toEndOf="@id/left_or"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/right_or"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:background="@color/dark_grey_3d"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/or"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <Button
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/white_border_round_square"
            android:fontFamily="@font/jet_brains_mono_m"
            android:text="@string/sign_in_latte"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/separate_layout" />

        <TextView
            android:id="@+id/find_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/noto_sans_r"
            android:text="@string/find_id"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@id/sign_up"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email" />

        <TextView
            android:id="@+id/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/noto_sans_r"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@id/find_id"
            app:layout_constraintTop_toBottomOf="@id/email" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
